docker/kubernetes/example/kubeguide/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
    name: frontend
    labels:
        name: frontend
spec:
    type: NodePort
    ports:
    -   port: 80
        targetPort: 80
        nodePort: 30001
    selector:
        name: frontend
