docker/kubernetes/example/kubeguide/redis-master-service.yml
apiVersion: v1
kind: Service
metadata:
    name: redis-master
    labels:
        name: redis-master
spec:
    ports:
    -   port: 6379
        targetPort: 6379
    selector:
        name: redis-master
