docker/kubernetes/example/kubeguide/redis-slave-service.yml
apiVersion: v1
kind: Service
metadata:
    name: redis-slave
    labels:
        name: redis-slave
spec:
    ports:
    -   port: 6379
    selector:
        name: redis-slave
